// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
<div>
  <div
    class="sc-bBHHQT kGZyAR"
  >
    <div
      class="sc-eCssSg gWLryE"
    >
      <div
        class="sc-jSgupP bEFiIf"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-llYToB desMbI"
    >
      <div
        class="sc-fFubgz fIzzcV"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-fodVxV TcooU"
          >
            Live Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            Remove the LIVE ballot before continuing.
          </p>
        </div>
        <div
          class="sc-bkzZxe gCWRJH"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          b52e9f4728
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
<div>
  <div
    class="sc-bBHHQT kGZyAR"
  >
    <div
      class="sc-eCssSg gWLryE"
    >
      <div
        class="sc-jSgupP bEFiIf"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-llYToB desMbI"
    >
      <div
        class="sc-fFubgz fIzzcV"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-fodVxV TcooU"
          >
            Test Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            Remove the TEST ballot before continuing.
          </p>
        </div>
        <div
          class="sc-bkzZxe gCWRJH"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          b52e9f4728
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT kGZyAR"
  >
    <div
      class="sc-eCssSg gWLryE"
    >
      <div
        class="sc-jSgupP bEFiIf"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-llYToB desMbI"
    >
      <div
        class="sc-fFubgz fIzzcV"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-fodVxV TcooU"
          >
            Blank Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as a 
            <strong>
              blank
            </strong>
             ballot sheet and has no votes.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-bkzZxe gCWRJH"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          b52e9f4728
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT kGZyAR"
  >
    <div
      class="sc-eCssSg gWLryE"
    >
      <div
        class="sc-jSgupP bEFiIf"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-llYToB desMbI"
    >
      <div
        class="sc-fFubgz fIzzcV"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-fodVxV TcooU"
          >
            Overvote
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot sheet with an
             
            <strong>
              overvote
            </strong>
            .
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-bkzZxe gCWRJH"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          b52e9f4728
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is undervoted if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT kGZyAR"
  >
    <div
      class="sc-eCssSg gWLryE"
    >
      <div
        class="sc-jSgupP bEFiIf"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-llYToB desMbI"
    >
      <div
        class="sc-fFubgz fIzzcV"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-fodVxV TcooU"
          >
            Undervote
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot with issue which could not be determined.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-bkzZxe gCWRJH"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          b52e9f4728
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-bBHHQT kGZyAR"
  >
    <div
      class="sc-eCssSg gWLryE"
    >
      <div
        class="sc-jSgupP bEFiIf"
      >
        <div
          class="sc-gKsewC iTtjkB"
        >
          <div
            class="sc-iBPRYJ inGyxo"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-fubCfw"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-pFZIQ fNwxur"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-llYToB desMbI"
    >
      <div
        class="sc-fFubgz fIzzcV"
      >
        <div
          class="sc-kEjbxe kKkrsc"
        >
          <div
            class="sc-fodVxV TcooU"
          >
            Unreadable
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            There was a problem reading the ballot. Remove ballot and reload in the scanner to try again.
          </p>
          <p>
            If the error persists remove ballot and create a duplicate ballot for the Resolution Board to review.
          </p>
        </div>
        <div
          class="sc-bkzZxe gCWRJH"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-bdvvaa iyFMHU"
    >
      <div
        class="sc-jRQAMF hrozKq"
      >
        <strong
          class="sc-hKwCoD kKHUyA"
        >
          General Election
        </strong>
         —
         
        <span
          class="sc-hKwCoD kKHUyA"
        >
          Tuesday, November 3, 2020
        </span>
        <div
          class="sc-dkPtyc dVpXhv"
        >
          <span
            class="sc-hKwCoD kKHUyA"
          >
            Franklin County
            ,
             
            State of Hamilton
          </span>
        </div>
      </div>
      <div
        class="sc-gsDJrp jyOfHF"
      />
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Software Version
        </div>
        <strong>
          TEST
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Machine ID
        </div>
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-jRQAMF jTERtK"
      >
        <div
          class="sc-dkPtyc dVpXhv"
        >
          Election ID
        </div>
        <strong>
          b52e9f4728
        </strong>
      </div>
    </div>
  </div>
</div>
`;
